fixed menu z-index on mobile

--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -83,7 +83,6 @@
         max-height: 0;
         overflow: hidden;
         transition: max-height .5s;
-        z-index: 1;
 
         a, a:hover, a:last-child, a:first-child {
             border-radius: 0;
